<resources>
    <string name="app_name">Timo</string>
    <string name="pref_header_customize">Customize</string>
    <string name="pref_header_misc">Miscellaneous</string>
    <string name="prefKeyTitleSendFeedback">Send Feedback</string>
    <string name="prefKeyTitleFaq">FAQ</string>
    <string name="bot_text">Experiencing any problems, send feedback</string>
    <string name="prefSummaryFaq">View frequently asked questions</string>
    <string name="prefKeyTitlePP">Privacy Policy</string>
    <string name="prefKeyTitleTNC">Terms &amp; Conditions</string>
    <string name="prefKeyTitleVibrate">Vibrate</string>
    <string name="prefSummaryVibrate">Vibrate on new notification</string>
    <string name="prefSummaryRingtone">Choose notification sound</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="summary_about">Made with &#9825; by Kashif</string>
    <string name="prefKeyTitleRate">Rate</string>
    <string name="prefSummaryRate">Love this app, let me know by showing some love</string>
    <string name="prefKeyTitleSnooze">Snooze Time</string>
    <string name="prefKeyTitleShare">Share</string>
    <string name="prefKeyTitleAbout">About</string>
    <string name="prefKeyTitleRingtone">Ringtone</string>
    <string name="add_Time">Time alarm</string>
    <string name="add_Battery">Battery alarm</string>
    <string name="add_Location">Location alarm</string>
    <string name="add_Prayer">Prayer alarm</string>
    <string name="settings">Settings</string>
    <string name="snoozeTitle">Select Snooze Time</string>
    <string name="locationPrecisionTitle">Select Location Precision</string>
    <string name="prefKeyTitleLocationPrecision">Location Precision</string>
    <string name="search_hint">Search for any Location..</string>
    <string name="openSourceLicenses">Open Source Licenses</string>
    <string name="tvItemEmptyExpandableRv">Please tap on + to set one or enable any existing alarm by tapping on the Show all Button</string>
    <string name="tvItemBatteryExpandableRv">Change Battery and Temperature levels by going into Battery Settings Screen</string>
    <string name="tvItemPrayerExpandableRv">For more regarding prayer details, go in the Prayer Settings Screen</string>
    <string name="google_android_map_api_key">AIzaSyA7sGiJNI3y2SlipMaKX_dxB290mImTmlQ</string>
    <string name="etNoteHint">Take a Note (Optional)</string>
    <string name="tvMapInstruction">Where do you want to be reminded? Drag the map to set the location</string>
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>

    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="activity_dialog_title">Forgot your Pin-Code?</string>
    <string name="activity_dialog_accept">OK</string>

    /////////////////////////////
    <string name="activity_dialog_decline">Cancel</string>
    <string name="activity_dialog_content">Tap \'OK\' to set your new Password,\n\nIf you remember your Pin-Code, tap \'Cancel\' to go back.</string>
    <string name="title_activity_crash">CrashActivity</string>
    <string-array name="snoozeTimings">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
    </string-array>
    <string-array name="locationPrecision">
        <item>100 metres</item>
        <item>500 metres</item>
        <item>1 kilometres</item>
        <item>2 kilometres</item>
        <item>5 kilometres</item>
    </string-array>

</resources>
