<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="Add Time alarm"
        android:enabled="true"
        android:icon="@drawable/ic_fab_time"
        android:shortcutShortLabel="@string/add_Time"
        android:shortcutLongLabel="@string/add_Time"
        android:shortcutDisabledMessage="@string/add_Time">
        <intent
            android:action="com.mdkashif.alarm.activities.home.time"
            android:targetPackage="com.mdkashif.sharemyride"
            android:targetClass="com.mdkashif.alarm.activities.home.HomeActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="Add Battery alarm"
        android:enabled="true"
        android:icon="@drawable/ic_fab_battery"
        android:shortcutShortLabel="@string/add_Battery"
        android:shortcutLongLabel="@string/add_Battery"
        android:shortcutDisabledMessage="@string/add_Battery">
        <intent
            android:action="com.mdkashif.alarm.activities.home.battery"
            android:targetPackage="com.mdkashif.alarm.activities.home"
            android:targetClass="com.mdkashif.alarm.activities.home.HomeActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="Add Location alarm"
        android:enabled="true"
        android:icon="@drawable/ic_fab_location"
        android:shortcutShortLabel="@string/add_Location"
        android:shortcutLongLabel="@string/add_Location"
        android:shortcutDisabledMessage="@string/add_Location">
        <intent
            android:action="com.mdkashif.alarm.activities.home.location"
            android:targetPackage="com.mdkashif.alarm.activities.home"
            android:targetClass="com.mdkashif.alarm.activities.home.HomeActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="Add Prayer alarm"
        android:enabled="true"
        android:icon="@drawable/ic_fab_salat"
        android:shortcutShortLabel="@string/add_Location"
        android:shortcutLongLabel="@string/add_Location"
        android:shortcutDisabledMessage="@string/add_Location">
        <intent
            android:action="com.mdkashif.alarm.activities.home.prayer"
            android:targetPackage="com.mdkashif.alarm.activities.home"
            android:targetClass="com.mdkashif.alarm.activities.home.HomeActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

</shortcuts>