<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopEndBottomStartLarge"
        android:layout_marginEnd="@dimen/marginTopEndBottomStartLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_settings" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginTopEndBottomStart"
        android:layout_marginTop="@dimen/ivHomeHeaderMarginTop"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/app_name"
        android:textColor="@color/primaryTextColor"
        android:textSize="56sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ivHomeMiniHeaderMarginStart"
        android:layout_marginTop="@dimen/marginTopVeryLarge"
        android:text="Upcoming"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader" />

    <com.hendraanggrian.recyclerview.widget.ExpandableRecyclerView
        android:id="@+id/rvAlarms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/tvSeeAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopEndBottomStartLarge"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/mediumTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvAlarms" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/marginTopEndBottomStartLarge"
        android:layout_marginBottom="@dimen/marginTopEndBottomStartLarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu_colorNormal="@color/bg"
        app:menu_colorPressed="@color/bg"
        app:menu_colorRipple="@color/bg"
        app:menu_fab_hide_animation="@anim/hide_to_bottom"
        app:menu_fab_show_animation="@anim/show_from_bottom"
        app:menu_fab_size="normal"
        app:menu_icon="@drawable/ic_fab_add"
        app:menu_labels_colorNormal="@color/bg"
        app:menu_labels_colorPressed="@color/bg"
        app:menu_labels_colorRipple="@color/bg"
        app:menu_labels_textColor="@color/secondaryTextColor">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabSalat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fab_salat"
            app:fab_colorNormal="@color/bg"
            app:fab_colorPressed="@color/bg"
            app:fab_colorRipple="@color/bg"
            app:fab_label="@string/add_Prayer"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fab_location"
            app:fab_colorNormal="@color/bg"
            app:fab_colorPressed="@color/bg"
            app:fab_colorRipple="@color/bg"
            app:fab_label="@string/add_Location"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabBattery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundTint="@color/colorPrimaryDark"
            android:src="@drawable/ic_fab_battery"
            app:fab_colorNormal="@color/bg"
            app:fab_colorPressed="@color/bg"
            app:fab_colorRipple="@color/bg"
            app:fab_label="@string/add_Battery"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fab_time"
            app:fab_colorNormal="@color/bg"
            app:fab_colorPressed="@color/bg"
            app:fab_colorRipple="@color/bg"
            app:fab_label="@string/add_Time"
            app:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>

</androidx.constraintlayout.widget.ConstraintLayout>