<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:id="@+id/fl_main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activities.home.HomeActivity"
            android:background="@color/pitchWhite">

        <com.imankur.analogclockview.AnalogClock
            android:id="@+id/analogClock"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            app:dial="@drawable/clock_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showSecondHand="true"
            app:minute="@drawable/min_hand"
            app:hour="@drawable/hour_hand"
            app:second="@drawable/sec_hand"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvAlarms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:menu_colorNormal="@color/white"
            app:menu_colorRipple="@color/pitchWhite"
            app:menu_colorPressed="@color/pitchWhite"
            app:menu_labels_textColor="@color/black"
            app:menu_labels_colorNormal="@color/pitchWhite"
            app:menu_labels_colorRipple="@color/colorPrimaryDark"
            app:menu_labels_colorPressed="@color/pitchWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:menu_fab_size="normal"
            app:menu_icon="@drawable/ic_fab_add_blue"
            app:menu_fab_show_animation="@anim/show_from_bottom"
            app:menu_fab_hide_animation="@anim/hide_to_bottom">

            <com.github.clans.fab.FloatingActionButton
                app:fab_colorNormal="@color/pitchWhite"
                app:fab_colorRipple="@color/colorPrimaryDark"
                app:fab_colorPressed="@color/pitchWhite"
                android:id="@+id/fab_salat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_fab_salat"
                app:fab_label="@string/add_Prayer"
                app:fab_size="mini"/>

            <com.github.clans.fab.FloatingActionButton
                app:fab_colorNormal="@color/pitchWhite"
                app:fab_colorRipple="@color/colorPrimaryDark"
                app:fab_colorPressed="@color/pitchWhite"
                android:id="@+id/fab_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_fab_location"
                app:fab_label="@string/add_Location"
                app:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                app:fab_colorNormal="@color/pitchWhite"
                app:fab_colorRipple="@color/colorPrimaryDark"
                app:fab_colorPressed="@color/pitchWhite"
                android:id="@+id/fab_battery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_fab_battery"
                app:fab_label="@string/add_Battery"
                app:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                app:fab_colorNormal="@color/pitchWhite"
                app:fab_colorRipple="@color/colorPrimaryDark"
                app:fab_colorPressed="@color/pitchWhite"
                android:id="@+id/fab_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_fab_time"
                app:fab_label="@string/add_Time"
                app:fab_size="mini"/>

        </com.github.clans.fab.FloatingActionMenu>

        <ImageView
            android:id="@+id/ivSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_settings" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="Alarms"
                android:textColor="@color/dark_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/analogClock" />

            <TextView
                android:id="@+id/tvSeeAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="+3 More"
                android:textColor="@color/dark_blue"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvAlarms" />

        </android.support.constraint.ConstraintLayout>

    </FrameLayout>

</layout>